# Proxyshop

./: .gitignore  README.md  main.py  pyproject.toml
plugins/Investigamer/: manifest.yml
plugins/Investigamer/py/: templates.py
plugins/Investigamer/py/actions/: pencilsketch.py  sketch.py
plugins/SilvanMTG/: manifest.yml
plugins/SilvanMTG/py/: templates.py
src/: __init__.py  _config.py  _loader.py  _state.py  cards.py  console.py  frame_logic.py  layouts.py  render_spec.py  startup.py  text_layers.py
src/commands/: build.py  files.py  render.py
src/commands/test/: __init__.py  compression.py  frame_logic.py  text_logic.py  utility.py
src/data/: env.default.yml  manifest.yml
src/data/config/: BorderlessVectorTemplate.toml  app.toml  base.toml
src/data/kv/: console.kv
src/data/tests/: template_renders.toml
src/enums/: adobe.py  layers.py  mtg.py  settings.py
src/gui/: app.py  console.py
src/gui/popup/: settings.py
src/gui/qml/: App.qml  qmldir
src/gui/qml/components/: Badge.qml  CustomButton.qml  CustomCheckBox.qml  CustomComboBox.qml  CustomItemDelegate.qml  CustomMenu.qml  CustomMenuItem.qml  CustomSpinBox.qml  CustomTabButton.qml  CustomTextField.qml  SelectableText.qml  qmldir
src/gui/qml/dialogs/: CustomFileDialog.qml  CustomMessageDialog.qml  qmldir
src/gui/qml/models/: base_dialog_model.py  batch_rendering_model.py  console_model.py  file_dialog_model.py  file_path_model.py  image_transform_model.py  message_dialog_content_model.py  pydantic_q_list_model.py  render_operations_model.py  settings_model.py  settings_tree_model.py  template_list_model.py  template_updater_model.py  test_renders_model.py
src/gui/qml/tools/: FontViewer.qml  ImageTransformWindow.qml  SystemPaletteViewer.qml  qmldir
src/gui/qml/views/: BatchRenderView.qml  Console.qml  RenderQueue.qml  SettingsWindow.qml  TemplateDetails.qml  TemplateList.qml  TemplateUpdater.qml  qmldir
src/gui/tabs/: main.py  tools.py
src/gui/utils/: behaviors.py  layouts.py
src/helpers/: actions.py  adjustments.py  bounds.py  colors.py  descriptors.py  design.py  document.py  effects.py  layers.py  masks.py  position.py  selection.py  text.py
src/render/: render_queue.py  setup.py
src/schema/: adobe.py  colors.py
src/schmas/: render_spec_schema.json
src/templates/: _core.py  _cosmetic.py  _vector.py  adventure.py  battle.py  case.py  classes.py  leveler.py  mdfc.py  mutate.py  normal.py  planar.py  planeswalker.py  prototype.py  saga.py  split.py  station.py  token.py  transform.py
src/utils/: adobe.py  asynchronic.py  build.py  data_structures.py  download.py  event.py  fonts.py  github.py  hexapi.py  images.py  lazy.py  logging.py  manual_actions.py  mtg.py  rate_limit.py  scryfall.py  tests.py  threading.py  windows.py
