[project]
name = "proxyshop"
version = "1.13.2"
description = "Photoshop automation tool for generating high quality Magic the Gathering card renders."
authors = [{ name = "Investigamer", email = "freethoughtleft@gmail.com" }]
license = "MPL-2.0"
readme = "README.md"
keywords = [
    "proxyshop",
    "proxy",
    "mtg",
    "magic",
    "gathering",
    "cards",
    "photoshop",
    "magic the gathering",
    "playtest",
]
requires-python = ">=3.11,<3.15"

[tool.poetry.urls]
Changelog = "https://github.com/Investigamer/Proxyshop/blob/main/CHANGELOG.md"
Discord = "https://discord.gg/magicproxies"
Documentation = "https://investigamer.github.io/Proxyshop"
Issues = "https://github.com/Investigamer/Proxyshop/issues"
Source = "https://github.com/Investigamer/Proxyshop"
Sponsor = "https://patreon.com/mpcfill"

[[tool.poetry.packages]]
include = 'src/../'

[tool.poetry.dependencies]
photoshop-python-api = { git = "https://github.com/pappnu/photoshop-python-api.git", branch = "type-annotation" }
requests = "^2.32.5"
asynckivy = "^0.9.0"
Pillow = "^11.3.0"
kivy = "^2.3.1"
typing-extensions = "^4.14.1"
limits = "^5.5.0"
backoff = "^2.2.1"
pathvalidate = "^3.3.1"
fonttools = "^4.59.1"
pyyaml = "^6.0.2"
tqdm = "^4.67.1"
click = "^8.2.1"
tomli = "^2.2.1"
yarl = "^1.20.1"
pydantic = "^2.11.7"
omnitils = { git = "https://github.com/pappnu/omnitils.git", branch = "dev" }
dynaconf = { extras = ["yaml"], version = "^3.2.11" }
hexproof = { git = "https://github.com/pappnu/hexproof.git", branch = "dev" }
rich = "^14.1.0"
pywin32 = "^311.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
mypy = "^1.17.1"
commitizen = "^4.8.3"
setuptools = "^80.9.0"
matplotlib = "^3.10.5"
psd-tools = "^1.10.9"
pyclean = "^3.1.0"
pyinstaller = "^6.15.0"
pre-commit = "^4.3.0"
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.18"
mkdocs-include-markdown-plugin = "^7.1.6"
mkdocs-pymdownx-material-extras = "^2.8.0"
mkdocs-minify-plugin = "^0.8.0"
mkdocstrings-python = "^1.17.0"
mkdocs-gen-files = "^0.5.0"
mkdocs-autolinks-plugin = "^0.7.1"
mkdocs-same-dir = "^0.1.3"
mkdocs-git-revision-date-plugin = "^0.3.2"
mkdocstrings = { extras = ["python"], version = "^0.30.0" }
memory-profiler = "^0.61.0"
types-pywin32 = "^311.0.0.20250809"
types-requests = "^2.32.4.20250809"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
version_provider = "pep621"
encoding = "utf-8"
changelog_start_rev = 'v1.2.0'
tag_format = "v$major.$minor.$patch"
update_changelog_on_bump = true

[tool.poetry.scripts]
proxyshop = 'main:launch_cli'

[tool.ruff.lint]
extend-select = [
    "UP", # pyupgrade
]
ignore = ["F403", "UP015"]

[tool.pyright]
typeCheckingMode = "strict"
reportMissingTypeStubs = "information"
